Fixed bug that messaging sidebar will overflow and also mnessaging line will not break due to css

--- a/src/components/Messaging/ChatMessage.css
+++ b/src/components/Messaging/ChatMessage.css
@@ -31,6 +31,7 @@
     font-size: 1rem;
     display: block;
     overflow-wrap: break-word;
+    white-space: pre-wrap;
 }
 
 .chat__timestamp{
